--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       name="keywords"
       content="vue,element-plus,typescript,vue-element-admin,vue3-element-admin"
     />
-    <title>vue3-element-admin</title>
+    <title>钉钉机器人</title>
   </head>
 
   <body>
